# saupdater

./: LICENSE  pyproject.toml  setup.py
docs/: README.md
docs/ru/: README_ru.md
saupdater/: __init__.py  _imports.py  errors.py  logger.py
