[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saupdater"
version = "1.0.0-alpha"
description = "The module checks for the presence of a .version file in the local repository, as well as the presence of a remote git source. It then compares the contents of the .version file on the repository and the local one. If there are differences, it executes the git pull command."
readme = "docs/README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Danex-Exe/saupdater"